@@ -16,11 +16,11 @@
    -
    - The Initial Developer of the Original Code is
    - BT Global Services / Etat francais Ministere de la Defense.
-   - Portions created by the Initial Developer are Copyright (C) 2010
+   - Portions created by the Initial Developer are Copyright (C) 2007
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Olivier Brun / BT Global Services / Etat francais Ministere de la Defense
+   -   Eric Ballet Baz / BT Global Services / Etat francais Ministere de la Defense
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -36,27 +36,8 @@
    -
    - ***** END LICENSE BLOCK ***** -->
 
-<rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:em="http://www.mozilla.org/2004/em-rdf#">
-  <em:creator>Trustedbird/Milimail project</em:creator>
-  <rdf:Description rdf:about="urn:mozilla:extension:mdn_extended@milimail.org">
-    <em:updates>
-      <rdf:Seq>
-        <rdf:li>
-          <rdf:Description>
-            <em:version>__VERSION__</em:version>
-            <em:targetApplication>
-              <rdf:Description>
-                <!-- Thunderbird -->
-                <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
-                <em:minVersion>2.0</em:minVersion>
-                <em:maxVersion>3.0.*</em:maxVersion>
-                <em:updateLink>__XPI_URL__</em:updateLink>
-                <em:updateHash>__UPDATE_HASH__</em:updateHash>
-              </rdf:Description>
-            </em:targetApplication>
-          </rdf:Description>
-        </rdf:li>
-      </rdf:Seq>
-    </em:updates>
-  </rdf:Description>
-</rdf:RDF>
+<overlay id="mdn_extended_messengeWindow_overlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
+
+  <script type="application/x-javascript" src="chrome://mdn_extended/content/mdn_extended.js"/>
+
+</overlay>
