@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- ***** BEGIN LICENSE BLOCK *****
    - Version: MPL 1.1/GPL 2.0/LGPL 2.1
    -
@@ -12,15 +12,15 @@
    - for the specific language governing rights and limitations under the
    - License.
    -
-   - The Original Code is Mozilla Communicator
+   - The Original Code is Trustedbird/MDN Extended code.
    -
    - The Initial Developer of the Original Code is
-   -   BT Global Services / Etat francais Ministere de la Defense
-   - Portions created by the Initial Developer are Copyright (C) 2002
+   - BT Global Services / Etat francais Ministere de la Defense.
+   - Portions created by the Initial Developer are Copyright (C) 2007
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Eric Ballet Baz BT Global Services / Etat francais Ministere de la Defense
+   -   Eric Ballet Baz / BT Global Services / Etat francais Ministere de la Defense
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -38,6 +38,6 @@
 
 <overlay id="mdn_extended_messenger_overlay" xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
 
-    <script type="application/x-javascript" src="chrome://mdn_extended/content/mdn_extended.js"/>
+  <script type="application/x-javascript" src="chrome://mdn_extended/content/mdn_extended-tb2.js"/>
 
 </overlay>
