@@ -12,16 +12,17 @@
    - for the specific language governing rights and limitations under the
    - License.
    -
-   - The Original Code is Mozilla Communicator
+   - The Original Code is Trustedbird/MDN Extended code.
    -
    - The Initial Developer of the Original Code is
-   -   BT Global Services / Etat francais Ministere de la Defense
-   - Portions created by the Initial Developer are Copyright (C) 2008
+   - BT Global Services / Etat francais Ministere de la Defense.
+   - Portions created by the Initial Developer are Copyright (C) 2010
    - the Initial Developer. All Rights Reserved.
    -
    - Contributor(s):
-   -   Eric Ballet Baz BT Global Services / Etat francais Ministere de la Defense
-   -   Olivier Brun BT Global Services / Etat francais Ministere de la Defense
+   -   Eric Ballet Baz / BT Global Services / Etat francais Ministere de la Defense
+   -   Olivier Brun / BT Global Services / Etat francais Ministere de la Defense
+   -   Raphael Fairise / BT Global Services / Etat francais Ministere de la Defense
    -
    - Alternatively, the contents of this file may be used under the terms of
    - either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -46,6 +47,7 @@
 
     <em:creator>Trustedbird/Milimail project</em:creator>
     <em:developer>Eric Ballet Baz</em:developer>
+    <em:developer>Raphael Fairise</em:developer>
     <em:contributor>Olivier Brun</em:contributor>
 
     <em:homepageURL>http://www.trustedbird.org/</em:homepageURL>
@@ -58,7 +60,7 @@
         <!-- Thunderbird -->
         <em:id>{3550f703-e582-4d05-9a08-453d09bdfdc6}</em:id>
         <em:minVersion>2.0</em:minVersion>
-        <em:maxVersion>2.0.0.*</em:maxVersion>
+        <em:maxVersion>3.0.*</em:maxVersion>
       </rdf:Description>
     </em:targetApplication>
 
