@@ -1,3 +1,7 @@
+mdn-extended (1.1.0)
+  * Thunderbird 3 compatibility
+-- Apr 20 2010
+
 mdn-extended (1.0.0)
   * Tag version 1
   * ChangeLog/README
